--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,22 @@ jobs:
   test:
     name: test
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:14-alpine
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
     steps:
 
     - name: Set up Go
@@ -23,6 +39,9 @@ jobs:
 
     - name: check out code in go module directory
       uses: actions/checkout@v4
+
+    - name: run migration
+      run: make migrateup
 
     - name: Test
       run: make test
