--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,12 @@ jobs:
     - name: check out code in go module directory
       uses: actions/checkout@v4
 
+    - name: install golang-migrate
+      run: |
+       curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.1/migrate.linux-amd64.tar.gz | tar xvz
+       mv migrate /usr/bin/migrate
+       which migrate
+
     - name: run migration
       run: make migrateup
 
