--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,15 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: ci-test
+name: test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   test:
     name: test
     runs-on: ubuntu-latest
@@ -31,23 +30,22 @@ jobs:
           - 5432:5432
 
     steps:
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.22.2"
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.22.2'
+      - name: check out code in go module directory
+        uses: actions/checkout@v4
 
-    - name: check out code in go module directory
-      uses: actions/checkout@v4
+      - name: install golang-migrate
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.1/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate /usr/bin/migrate
+          which migrate
 
-    - name: install golang-migrate
-      run: |
-       curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.1/migrate.linux-amd64.tar.gz | tar xvz
-       sudo mv migrate /usr/bin/migrate
-       which migrate
+      - name: run migration
+        run: make migrateup
 
-    - name: run migration
-      run: make migrateup
-
-    - name: Test
-      run: make test
+      - name: Test
+        run: make test
