--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,13 +8,19 @@ on:
     branches: ["main"]
 
 jobs:
-  test:
+  deploy:
     name: build image
     runs-on: ubuntu-latest
 
     steps:
       - name: check out code
         uses: actions/checkout@v4
+
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+          version: "v1.31.0"
+        id: install
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -36,5 +42,16 @@ jobs:
           REPOSITORY: simple-bank
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
+          docker push $REGISTRY/$REPOSITORY
+
+      - name: Update Kube Config
+        run: aws eks update-kubeconfig --name simple-bank --region ap-south-1
+
+      - name: Deploye image to eks cluster
+        run: |
+          kubectl apply -f eks/aws-auth.yaml
+          kubectl apply -f eks/deployment.yaml
+          kubectl apply -f eks/service.yaml
+          kubectl apply -f eks/issuer.yaml
+          kubectl apply -f eks/ingress.yaml
