--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -51,10 +51,12 @@ jobs:
       - name: debug step
         run: |
           aws sts get-caller-identity
+          kubectl config get-contexts
 
       - name: Deploye image to eks cluster
         run: |
-          kubectl apply -f eks/aws-auth.yaml
+          kubectl apply -f eks/aws-auth.yaml --validate=false
+          kubectl config get-contexts
           kubectl apply -f eks/deployment.yaml
           kubectl apply -f eks/service.yaml
           kubectl apply -f eks/issuer.yaml
