debug step added to get the issue in kubectl

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -45,8 +45,8 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
           docker push $REGISTRY/$REPOSITORY
 
-      # - name: Update Kube Config
-      #   run: aws eks update-kubeconfig --name simple-bank --region ap-south-1
+      - name: Update Kube Config
+        run: aws eks update-kubeconfig --name simple-bank --region ap-south-1
 
       - name: Deploye image to eks cluster
         run: |
