--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,6 +1,3 @@
-# This workflow will build and deploy the golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: deployment
 
 on:
@@ -46,12 +43,17 @@ jobs:
           docker push $REGISTRY/$REPOSITORY
 
       - name: Update Kube Config
-        run: aws eks update-kubeconfig --name simple-bank --region ap-south-1
-
-      - name: Deploye image to eks cluster
         run: |
-          kubectl apply -f eks/aws-auth.yaml
-          kubectl apply -f eks/deployment.yaml
-          kubectl apply -f eks/service.yaml
-          kubectl apply -f eks/issuer.yaml
-          kubectl apply -f eks/ingress.yaml
+          aws eks update-kubeconfig --name simple-bank --region ap-south-1
+          # Export the KUBECONFIG variable
+          echo "KUBECONFIG=/home/runner/.kube/config" >> $GITHUB_ENV
+
+      - name: Deploy image to eks cluster
+        env:
+          KUBECONFIG: ${{ env.KUBECONFIG }}
+        run: |
+          kubectl apply -f eks/aws-auth.yaml --validate=false
+          kubectl apply -f eks/deployment.yaml --validate=false
+          kubectl apply -f eks/service.yaml --validate=false
+          kubectl apply -f eks/issuer.yaml --validate=false
+          kubectl apply -f eks/ingress.yaml --validate=false
