debug step added to get the issue in kubectl

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,22 +1,22 @@
-name: deployment
+name: Deploy to production
 
 on:
   push:
-    branches: ["main"]
+    branches: [main]
 
 jobs:
   deploy:
-    name: build image
+    name: Build image
     runs-on: ubuntu-latest
 
     steps:
-      - name: check out code
-        uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v2
 
       - name: Install kubectl
-        uses: azure/setup-kubectl@v4
+        uses: azure/setup-kubectl@v1
         with:
-          version: "v1.31.1"
+          version: "v1.21.3"
         id: install
 
       - name: Configure AWS credentials
@@ -33,18 +33,20 @@ jobs:
       - name: Load secrets and save to app.env
         run: aws secretsmanager get-secret-value --secret-id simple_bank --query SecretString --output text | jq -r 'to_entries|map("\(.key)=\(.value)")|.[]' > app.env
 
-      - name: Build, tag, and push docker image to Amazon ECR
+      - name: Build, tag, and push image to Amazon ECR
         env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: simple-bank
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: simplebank
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
-          docker push $REGISTRY/$REPOSITORY
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker push -a $ECR_REGISTRY/$ECR_REPOSITORY
 
-      - name: Deploy image to eks cluster
+      - name: Update kube config
+        run: aws eks update-kubeconfig --name simple-bank --region ap-south-1
+
+      - name: Deploy image to Amazon EKS
         run: |
-          echo $AWS_PROFILE
           kubectl apply -f eks/aws-auth.yaml
           kubectl apply -f eks/deployment.yaml
           kubectl apply -f eks/service.yaml
